# Bus-Departure-Board

./: README.md  SwissDepartureBoard.py  config.py  ojp_departures.py  ojp_v1_departure_parser.py  pyproject.toml  requirementsPy3.txt
scripts/: run_board_uv.sh
services/: bus-departure-board.service
